force-app/main/default/objects/Log_Hour__c/Log_Hour__c.object-meta.xml
<CustomObject>
    <label>Log Hour</label>
    <nameField>
        <displayFormat>LOG-{000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>