force-app/main/default/objects/Log_Hour__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
                <default>true</default>
                <label>Billable</label>
            </value>
            <value>
                <fullName>Non Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>