force-app/main/default/objects/Log_Hour__c/fields/Daily_Log__c.field-meta.xml
<CustomField>
    <fullName>Daily_Log__c</fullName>
    <label>Daily Log</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>