force-app/main/default/objects/Log_Hour__c/fields/Daily_Log_Hour__c.field-meta.xml
<CustomField>
    <fullName>Daily_Log_Hour__c</fullName>
    <label>Daily Log Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>