force-app/main/default/objects/Log_Hour__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Log Hours</relationshipLabel>
    <relationshipName>Log_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>