force-app/main/default/objects/Log_Hour__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Log Hours</relationshipLabel>
    <relationshipName>Log_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>