force-app/main/default/objects/Log_Hour__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Log Hours</relationshipLabel>
    <relationshipName>Log_Hours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>