force-app/main/default/objects/Log_Hour__c/validationRules/hour_should_not_greater_than_24.validationRule-meta.xml
<ValidationRule>
    <fullName>hour_should_not_greater_than_24</fullName>
    <active>false</active>
    <errorConditionFormula>OR(NOT(Daily_Log_Hour__c &lt; 23 ),NOT(Daily_Log_Mins__c &lt; 59 ))</errorConditionFormula>
    <errorDisplayField>Daily_Log_Hour__c</errorDisplayField>
    <errorMessage>Time Should be less than 24Hour</errorMessage>
</ValidationRule>