force-app/main/default/objects/Log_Hour__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Task__c</columns>
    <columns>Notes__c</columns>
    <columns>Date__c</columns>
    <columns>Daily_Log_Hour__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>